# cv_samples

./: .gitignore  .gitmodules  README.md
UI/: writeOnImg.py
background-subtraction/: bgsSample.py
features/: CMakeLists.txt  sif.py
image-segmentation/: bs1.cpp
image-segmentation/hw921/: CMakeLists.txt  bs2.cpp
optical-flow/: ans2_gmg.cpp
optical-flow/cv_course_2019/: CMakeLists.txt
optical-flow/cv_course_2019/solution/: ans2_mog.cpp
optical-flow/cv_course_2019/try/: backgroundSubtraction2.cpp  t32.py
practical-projects/license-plate-detection/hough/: CMakeLists.txt  out.txt  project.cpp  tresh.py
projects/license-plate-detection/: CMakeLists.txt  license-plate-test.txt  readme.md
projects/license-plate-detection/hough/: adjustment.cpp  detection.cpp  equal.cpp  hou.cpp  houg.cpp  readme.md  untitled0.py  ut.txt
projects/license-plate-detection/src/: license_generator.cpp
projects/license-plate-detection/yolo/: license-plate-test.txt
projects/license-plate-detection/yolo/dataset/: normal_1.txt  normal_100.txt  normal_101.txt  normal_102.txt  normal_103.txt  normal_105.txt  normal_106.txt  normal_109.txt  normal_111.txt  normal_112.txt  normal_113.txt  normal_115.txt  normal_116.txt  normal_117.txt  normal_12.txt  normal_120.txt  normal_121.txt  normal_122.txt  normal_124.txt  normal_126.txt  normal_129.txt  normal_13.txt  normal_131.txt  normal_132.txt  normal_133.txt  normal_134.txt  normal_138.txt  normal_14.txt  normal_141.txt  normal_144.txt  normal_146.txt  normal_147.txt  normal_148.txt  normal_149.txt  normal_150.txt  normal_151.txt  normal_152.txt  normal_154.txt  normal_155.txt  normal_159.txt  (+317 more)
projects/license-plate-detection/yolo/defaced/: defaced_10.txt  defaced_100.txt  defaced_101.txt  defaced_102.txt  defaced_104.txt  defaced_106.txt  defaced_108.txt  defaced_109.txt  defaced_11.txt  defaced_110.txt  defaced_111.txt  defaced_114.txt  defaced_115.txt  defaced_117.txt  defaced_118.txt  defaced_119.txt  defaced_120.txt  defaced_121.txt  defaced_122.txt  defaced_123.txt  defaced_124.txt  defaced_126.txt  defaced_128.txt  defaced_129.txt  defaced_13.txt  defaced_130.txt  defaced_131.txt  defaced_132.txt  defaced_133.txt  defaced_136.txt  defaced_137.txt  defaced_14.txt  defaced_141.txt  defaced_145.txt  defaced_147.txt  defaced_149.txt  defaced_15.txt  defaced_151.txt  defaced_152.txt  defaced_153.txt  (+341 more)
stereo-vision/: abcode.txt  postf3.py  sol3a.py  sol4.py  test2.py
textures/: New Text Document.txt
utils/: imgResize.py  (+2 more)
(+749 files in other folders)
